fix [#29462] libraries.load can't have link=False when relative=True

was doing an unnecessary (and incorrect) library lookup.